--- a/components/Form/Step1/step1.module.css
+++ b/components/Form/Step1/step1.module.css
@@ -1,25 +1,25 @@
 @value tokens: "../../../css/tokens.module.css";
-@value blueColor, yellowColor from tokens;
+@value blueColor, yellowColor, beigeColor from tokens;
 
 .part {
-  composes: view from '../../../css/layout.module.css';
+  composes: view from "../../../css/layout.module.css";
 }
 
 .title {
-  composes: largeTitleOutline from '../../../css/typo.module.css';
+  composes: largeTitleOutline from "../../../css/typo.module.css";
   margin-bottom: 1rem;
 }
 
 .title_outline {
-  composes: largeTitle from '../../../css/typo.module.css';
+  composes: largeTitle from "../../../css/typo.module.css";
 }
 
-.title-description {
-  composes: semiBold from '../../../css/typo.module.css';
+.title_description {
+  composes: semiBold from "../../../css/typo.module.css";
 }
 
 .subtitle {
-  composes: mediumTitle from '../../../css/typo.module.css';
+  composes: mediumTitle from "../../../css/typo.module.css";
 }
 
 .checkbox {
@@ -27,16 +27,17 @@
 }
 
 .checkbox_text {
-  composes: smallCaps from '../../../css/typo.module.css';
+  composes: smallCaps from "../../../css/typo.module.css";
   text-align: center;
+  margin-top: 2rem;
 }
 
 .label {
-  composes: semiBold from '../../../css/typo.module.css';
+  composes: semiBold from "../../../css/typo.module.css";
 }
 
 .option {
-  composes: smallCaps from '../../../css/typo.module.css';
+  composes: smallCaps from "../../../css/typo.module.css";
 }
 
 .part_header {
@@ -47,11 +48,81 @@
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   margin-bottom: 5rem;
+  grid-column-gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
 }
 
 .form {
   display: flex;
   flex-direction: column;
+}
+
+.company,
+.individu {
+  z-index: 2;
+}
+
+.form_company,
+.form_individu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.individu_image,
+.company_image {
+  padding: 10rem;
+  border: 0.3rem solid blueColor;
+  display: inline-block;
+  margin-bottom: 1rem;
+  position: relative;
+  background-color: beigeColor;
+  cursor: pointer;
+}
+
+.company_image:after,
+.individu_image::after {
+  content: "";
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  top: 1.5rem;
+  left: 1.5rem;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+}
+
+.form_company:hover .company_image:after,
+.form_individu:hover .individu_image::after {
+  top: 0;
+  left: 0;
+}
+
+.checkbox[type="radio"]:checked ~ .company_image:after {
+  top: 0;
+  left: 0;
+}
+
+.checkbox[type="radio"]:checked ~ .individu_image::after {
+  top: 0;
+  left: 0;
+}
+
+.checkbox[type="radio"]:checked ~ .individu_image,
+.checkbox[type="radio"]:checked ~ .company_image {
+  background-color: blueColor;
+}
+
+.checkbox[type="radio"]:checked ~ .individu_image svg path,
+.checkbox[type="radio"]:checked ~ .company_image svg path {
+  fill: beigeColor;
+  stroke: blueColor;
 }
 
 .input_container {
@@ -66,7 +137,7 @@
   border-top: none;
   border-right: none;
   border-left: none;
-  composes: empty from '../../../css/typo.module.css';
+  composes: empty from "../../../css/typo.module.css";
   padding: 0.2rem 0.5rem;
 }
 
@@ -84,13 +155,13 @@
 }
 
 .button {
-  composes: button from '../../../css/buttons.module.css';
+  composes: button from "../../../css/buttons.module.css";
 }
 
 .circle_button {
-  composes: circleButton from '../../../css/buttons.module.css';
+  composes: circleButton from "../../../css/buttons.module.css";
 }
 
 .button_image {
-  composes: buttonImage from '../../../css/buttons.module.css';
+  composes: buttonImage from "../../../css/buttons.module.css";
 }
