--- a/css/projects.module.css
+++ b/css/projects.module.css
@@ -1,5 +1,5 @@
 @value tokens: "../css/tokens.module.css";
-@value blueColor, yellowColor, beigeColor from tokens;
+@value blueColor, yellowColor, beigeColor, greenColor from tokens;
 
 .part {
   composes: view from "../css/layout.module.css";
@@ -31,17 +31,23 @@
 
 .filter_start {
   display: flex;
+  align-items: center;
+}
+
+.filter_end {
+  display: flex;
+  align-items: center;
 }
 
 .filter_fase {
   display: flex;
-  margin-left: 4rem;
+  margin-left: 2rem;
 }
 
 .filter_radio {
   composes: smallCaps from "../css/typo.module.css";
   color: #e5d6c0;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   padding: 0.5rem 0.5rem;
   margin-top: 0.5rem;
   border-bottom: 0.2rem solid beigeColor;
@@ -74,6 +80,10 @@
   padding: 0.2rem 0.5rem;
 }
 
+.input_radio {
+  cursor: pointer;
+}
+
 .input_radio[type="radio"]:hover ~ .input_text:after {
   top: 0;
   left: 0;
@@ -99,6 +109,9 @@
 
 .part_content {
   margin-bottom: 2rem;
+  height: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .projecten {
@@ -106,7 +119,78 @@
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   grid-gap: 5rem;
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; */
+}
+
+.empty_button {
+  border: none;
+  background-color: transparent;
+  margin-left: 1rem;
+  padding: 0.5rem 0.5rem;
+  cursor: pointer;
+}
+
+.empty_state {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  grid-column: span 3;
+  z-index: 2;
+}
+
+.empty_state__text {
+  composes: mediumTitle from "./typo.module.css";
+  color: #e5d6c0;
+  text-align: center;
+  font-size: 4rem;
+}
+
+.empty_state__text__outline {
+  composes: mediumTitleOutline from "./typo.module.css";
+  -webkit-text-stroke: 0.1rem #e5d6c0;
+  text-stroke: 0.1rem #e5d6c0;
+  display: inline-block;
+  font-size: 4rem;
+}
+
+.empty_state_buttons {
+}
+
+.empty_state__button {
+  border: 0.2rem solid blueColor;
+  composes: smallCaps from "./typo.module.css";
+  padding: 0.8rem 1rem;
+  position: relative;
+  background-color: beigeColor;
+  margin-top: 2rem;
+  margin-right: 4rem;
+}
+
+.empty_state__button:after {
+  content: "";
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  top: 0.7rem;
+  left: 0.7rem;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+}
+
+.empty_state__button__extra {
+  composes: smallCapsLight from "./typo.module.css";
+  border-bottom: 0.1rem solid #091422;
+  display: inline-block;
+  padding: 0.5rem 0;
+  color: #091422;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  background-color: transparent;
+  margin-top: 1rem;
 }
