Small Loading state adjustment Projects

--- a/css/home.css
+++ b/css/home.css
@@ -208,6 +208,7 @@
   margin-right: 2rem;
   position: relative;
   background-color: #fdecd2;
+  cursor: pointer;
 }
 
 .home_button__start:after {
