--- a/css/typo.module.css
+++ b/css/typo.module.css
@@ -55,6 +55,31 @@
   line-height: 2.5rem;
 }
 
+.title {
+  font-family: Montserrat, sans-serif;
+  font-weight: 800;
+  font-size: 5rem;
+  text-transform: uppercase;
+  color: blueColor;
+  letter-spacing: 0.01rem;
+  line-height: 5rem;
+}
+
+.titleOutline {
+  font-family: Montserrat, sans-serif;
+  font-weight: 900;
+  font-size: 5rem;
+  text-transform: uppercase;
+  -webkit-text-stroke: 0.12rem blueColor;
+  text-stroke: 0.12rem blueColor;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  display: flex;
+  flex-direction: column;
+  letter-spacing: 0.05rem;
+  line-height: 5rem;
+}
+
 .smallCaps {
   font-family: Montserrat, sans-serif;
   font-weight: 800;
@@ -78,6 +103,7 @@
   font-weight: 500;
   font-size: 1.8rem;
   color: blueColor;
+  line-height: 2.2rem;
 }
 
 .smallText {
@@ -92,6 +118,7 @@
   font-weight: 700;
   font-size: 1.8rem;
   color: blueColor;
+  line-height: 2.2rem;
 }
 
 .semiBold {
