--- a/css/buttons.module.css
+++ b/css/buttons.module.css
@@ -18,7 +18,7 @@
 }
 
 .circleButton:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -47,6 +47,58 @@
 }
 
 .button:hover .buttonImage {
+  animation: rotation 4s infinite linear;
+  cursor: pointer;
+  animation-play-state: running;
+  webkit-animation-play-state: running;
+}
+
+.smallButton {
+  border: none;
+  background-color: transparent;
+  display: inline-block;
+}
+
+.smallCircleButton {
+  background-color: yellowColor;
+  border: 0.2rem solid blueColor;
+  position: relative;
+  border-radius: 50%;
+  display: block;
+  padding: 0.5rem;
+  width: 100%;
+}
+
+.smallCircleButton:after {
+  content: '';
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  bottom: 10%;
+  right: 10%;
+  width: 105%;
+  height: 105%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+  padding: 0.2rem solid colorBlue;
+}
+
+.smallButton:hover .smallCircleButton:after {
+  bottom: 0%;
+  right: 0%;
+  width: 100%;
+  height: 100%;
+}
+
+.smallButtonImage {
+  animation: rotation 4s infinite linear;
+  animation-play-state: paused;
+  webkit-animation-play-state: paused;
+}
+
+.smallButton:hover .smallButtonImage {
   animation: rotation 4s infinite linear;
   cursor: pointer;
   animation-play-state: running;
