--- a/css/projects.module.css
+++ b/css/projects.module.css
@@ -2,7 +2,7 @@
 @value blueColor, yellowColor, beigeColor, greenColor from tokens;
 
 .part {
-  composes: view from "../css/layout.module.css";
+  composes: view from '../css/layout.module.css';
 }
 
 .part_header {
@@ -10,12 +10,12 @@
 }
 
 .title {
-  composes: largeTitleOutline from "../css/typo.module.css";
+  composes: largeTitleOutline from '../css/typo.module.css';
   margin-bottom: 1rem;
 }
 
 .title_outline {
-  composes: largeTitle from "../css/typo.module.css";
+  composes: largeTitle from '../css/typo.module.css';
 }
 
 .part_filter {
@@ -45,7 +45,7 @@
 }
 
 .filter_radio {
-  composes: smallCaps from "../css/typo.module.css";
+  composes: smallCaps from '../css/typo.module.css';
   color: #e5d6c0;
   margin-right: 0.5rem;
   padding: 0.5rem 0.5rem;
@@ -56,7 +56,7 @@
 .filter_select {
   border: 0.2rem solid blueColor;
   background-color: transparent;
-  composes: smallCaps from "../css/typo.module.css";
+  composes: smallCaps from '../css/typo.module.css';
   padding: 0.5rem 1rem;
   margin-right: 1rem;
   cursor: pointer;
@@ -76,7 +76,7 @@
   border-top: none;
   border-right: none;
   border-left: none;
-  composes: empty from "../css/typo.module.css";
+  composes: empty from '../css/typo.module.css';
   padding: 0.5rem;
 }
 
@@ -84,17 +84,17 @@
   cursor: pointer;
 }
 
-.input_radio[type="radio"]:hover ~ .input_text:after {
+.input_radio[type='radio']:hover ~ .input_text:after {
   top: 0;
   left: 0;
 }
 
-.input_radio[type="radio"]:checked + .filter_radio {
+.input_radio[type='radio']:checked + .filter_radio {
   color: blueColor;
   border-bottom: 0.2rem solid blueColor;
 }
 
-.input_radio[type="radio"]:checked ~ .input_text:after {
+.input_radio[type='radio']:checked ~ .input_text:after {
   left: 0;
   top: 0;
 }
@@ -140,14 +140,14 @@
 }
 
 .empty_state__text {
-  composes: mediumTitle from "./typo.module.css";
+  composes: mediumTitle from './typo.module.css';
   color: #e5d6c0;
   text-align: center;
   font-size: 4rem;
 }
 
 .empty_state__text__outline {
-  composes: mediumTitleOutline from "./typo.module.css";
+  composes: mediumTitleOutline from './typo.module.css';
   -webkit-text-stroke: 0.1rem #e5d6c0;
   text-stroke: 0.1rem #e5d6c0;
   display: inline-block;
@@ -160,7 +160,7 @@
 }
 
 .empty_state__button {
-  composes: smallCaps from "./typo.module.css";
+  composes: smallCaps from './typo.module.css';
   margin-left: 5rem;
   border: 0.2rem solid blueColor;
   padding: 0.8rem 1rem;
@@ -171,7 +171,7 @@
 }
 
 .empty_state__button:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -191,7 +191,7 @@
 }
 
 .empty_state__button__extra {
-  composes: smallCapsLight from "./typo.module.css";
+  composes: smallCapsLight from './typo.module.css';
   border-bottom: 0.1rem solid #091422;
   display: inline-block;
   padding: 0.5rem 0;
@@ -202,4 +202,13 @@
   background-color: transparent;
   margin-top: 1rem;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1500px) {
+  .projecten {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-gap: 5rem;
+  }
 }
