--- a/components/Detail/Needs/needs.module.css
+++ b/components/Detail/Needs/needs.module.css
@@ -10,6 +10,7 @@
 .needs_list {
   display: flex;
   flex-direction: row;
+  margin-top: 2rem;
 }
 
 .need {
@@ -23,24 +24,38 @@
   text-align: center;
   margin-right: 2rem;
   position: relative;
-}
-
-.need_item:last-of-type {
-  margin-right: 0;
+  align-items: center;
 }
 
 .need_item__text {
   composes: smallCaps from '../../../css/typo.module.css';
+  margin-bottom: 1rem;
 }
 
 .needs_item__image {
   border: 0.3rem solid blueColor;
   width: 10rem;
   height: 10rem;
-  display: inline-block;
+  background-color: beigeColor;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+
+.needs_item__image:after {
+  content: '';
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  top: 1rem;
+  left: 1rem;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
 }
 
 .need_button {
