--- a/components/Detail/Needs/needs.module.css
+++ b/components/Detail/Needs/needs.module.css
@@ -3,18 +3,35 @@
 
 /* Benodigdheden */
 
+.needs_header {
+  display: flex;
+  justify-content: space-between;
+}
+
 .needs_title {
   composes: mediumTitle from '../../../css/typo.module.css';
+}
+
+.needs_provided {
+  composes: smallCaps from '../../../css/typo.module.css';
+}
+
+.needs_provided__light {
+  composes: smallCapsLight from '../../../css/typo.module.css';
+  padding-right: 0.5rem;
 }
 
 .needs_list {
   display: flex;
   flex-direction: row;
-  margin-top: 2rem;
 }
 
 .need {
   position: relative;
+}
+
+.needs_text {
+  display: flex;
 }
 
 .need_item {
@@ -22,7 +39,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  margin-right: 2rem;
+  margin-right: 7rem;
   position: relative;
   align-items: center;
 }
@@ -30,6 +47,7 @@
 .need_item__text {
   composes: smallCaps from '../../../css/typo.module.css';
   margin-bottom: 1rem;
+  font-size: 1.2rem;
 }
 
 .needs_item__image {
@@ -41,6 +59,11 @@
   align-items: center;
   justify-content: center;
   position: relative;
+}
+
+.needs_not__provided,
+.needs_not__provided:after {
+  opacity: 0.3;
 }
 
 .needs_item__image:after {
@@ -60,8 +83,9 @@
 
 .need_button {
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: -2rem;
+  z-index: 3;
+  bottom: -2rem;
 }
 
 .button {
@@ -70,8 +94,68 @@
 
 .circle_button {
   composes: smallCircleButton from '../../../css/buttons.module.css';
+  transition: none;
+}
+
+.circle_button_provided {
+  background-color: beigeColor;
+  padding: 1.4rem;
 }
 
 .button_image {
   composes: smallButtonImage from '../../../css/buttons.module.css';
+}
+
+.need_motivation {
+  z-index: 2;
+}
+
+.motivation_text {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.motivation_input {
+  border: 0.2rem solid blueColor;
+  background-color: transparent;
+  composes: empty from '../../../css/typo.module.css';
+  padding: 0.5rem 0.5rem;
+  position: relative;
+  width: 100%;
+  height: 10rem;
+}
+
+.motivation_input:after {
+  content: '';
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  top: 1rem;
+  left: 1rem;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+}
+
+.button_back {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.button_arrow {
+  composes: buttonBack from '../../../css/buttons.module.css';
+  cursor: pointer;
+}
+
+.back_image {
+  margin-right: 0.5rem;
+}
+
+.back_text {
+  composes: bold from '../../../css/typo.module.css';
 }
