--- a/components/Detail/Extra/extra.module.css
+++ b/components/Detail/Extra/extra.module.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 90rem;
 }
 
 /* Extra Tagline */
@@ -17,22 +18,25 @@
 
 .tagline_text {
   composes: mediumTitle from '../../../css/typo.module.css';
+  position: relative;
 }
 
 .tagline_image {
   position: absolute;
+  bottom: 0;
+  left: 0;
+  display: block;
 }
 
 .extra_image {
   z-index: 2;
-}
-
-.project_image {
   border: 0.4rem solid blueColor;
   position: relative;
+  width: 100%;
+  object-fit: cover;
 }
 
-.project_image:after {
+.extra_image:after {
   content: '';
   position: absolute;
   display: block;
@@ -45,6 +49,12 @@
   height: 100%;
   z-index: -1;
   transition: all 0.2s ease-in-out;
+}
+
+.project_image {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .extra_button {
