--- a/css/layout.module.css
+++ b/css/layout.module.css
@@ -1,7 +1,14 @@
 .view {
   min-height: 100vh;
   padding: 8rem 0;
-  margin: 0 10rem 0 15rem;
+  margin: 0 10rem 0 14rem;
   display: flex;
   flex-direction: column;
+}
+
+@media screen and (max-width: 1500px) {
+  .view {
+    padding: 4rem 0;
+    margin: 0 4rem 0 10rem;
+  }
 }
