--- a/components/Detail/Extra/extra.module.css
+++ b/components/Detail/Extra/extra.module.css
@@ -33,7 +33,7 @@
   border: 0.4rem solid blueColor;
   position: relative;
   width: 100%;
-  height: 75%;
+  height: 55rem;
 }
 
 .extra_image:after {
