--- a/css/layout.module.css
+++ b/css/layout.module.css
@@ -12,3 +12,34 @@
     margin: 0 4rem 0 10rem;
   }
 }
+
+@media screen and (max-width: 1000px) {
+  .view {
+    padding: 4rem 0;
+    margin: 0 2rem 0 8rem;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .view {
+    padding: 4rem 0;
+    margin: 0 1rem 0 1rem;
+  }
+}
+
+
+@media screen and (max-width: 550px) {
+
+  .view {
+    margin: 0 2rem 0 2rem;
+  }
+
+}
+
+@media screen and (max-width: 450px) {
+
+  .view {
+    margin: 0 1rem 0 1rem;
+  }
+
+}
