--- a/css/project.module.css
+++ b/css/project.module.css
@@ -142,3 +142,60 @@
 .need:last-of-type {
   margin-right: 0;
 }
+
+
+@media screen and (max-width: 1350px) {
+
+  .card {
+    min-width: 36rem;
+    padding: 1rem;
+  }
+
+
+}
+
+@media screen and (max-width: 850px) {
+
+  .card {
+    min-width: 25rem;
+    padding: 1rem;
+  }
+
+  .card_image {
+    height: 18rem;
+  }
+
+  .card_info {
+    margin-top: .5rem;
+  }
+
+}
+
+@media screen and (max-width: 750px) {
+
+  .card_image {
+    height: 15rem;
+  }
+}
+
+@media screen and (max-width: 550px) {
+
+  .card_image {
+    height: 25rem;
+  }
+  .project {
+    margin: 0 .5rem 0 1rem;
+  }
+
+  .card {
+    margin-bottom: 5rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+
+  .card_image {
+    height: 20rem;
+  }
+}
+
