--- a/css/layout.module.css
+++ b/css/layout.module.css
@@ -6,6 +6,14 @@
   flex-direction: column;
 }
 
+.viewLarge {
+  min-height: 100vh;
+  padding: 8rem 0;
+  margin: 0 0 0 14rem;
+  display: flex;
+  flex-direction: column;
+}
+
 @media screen and (max-width: 1500px) {
   .view {
     padding: 4rem 0;
@@ -27,19 +35,14 @@
   }
 }
 
-
 @media screen and (max-width: 550px) {
-
   .view {
     margin: 0 2rem 0 2rem;
   }
-
 }
 
 @media screen and (max-width: 450px) {
-
   .view {
     margin: 0 1rem 0 1rem;
   }
-
 }
